--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,5 @@
 //= require_tree .
 //= require_self
- 
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
@@ -13,3 +12,7 @@
   color: red
 .valid
   background: red
+.income
+  background: rgba(0, 204, 0, 0.4) 
+.outgo
+  background: rgba(255, 102, 0, 0.4)
