--- a/app/assets/javascripts/application/templates/chart.html.slim
+++ b/app/assets/javascripts/application/templates/chart.html.slim
@@ -1,1 +1,28 @@
-#chart style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"
+.row
+  .col-md-3
+    | From Date:
+    p.input-group
+      input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="fromDate" is-open="from_opened" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
+      span.input-group-btn
+        button type="button" class="btn btn-default" ng-click="from_opened = true"
+          i.glyphicon.glyphicon-calendar
+  .col-md-3
+    | To Date:
+    p.input-group
+      input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="toDate" is-open="to_opened" min-date="fromDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
+      span.input-group-btn
+        button type="button" class="btn btn-default" ng-click="to_opened = true"
+          i.glyphicon.glyphicon-calendar
+  .col-md-3
+    br
+    button.btn.btn-default ng-disabled="!fromDate || !toDate" ng-click="getGraph(fromDate, toDate)" Draw graph
+.row
+  .error style="text-align:center" ng-hide="graphData.length || hideError" There were no transactions in given period
+  .col-md-8 ng-show="graphData.length"
+    br
+    #chart style=" height: 400px;"
+  .col-md-4 ng-show="graphData.length"  
+    br
+    ul.list-group
+      li.list-group-item ng-repeat="data in graphData"
+        | {{data.name}} -- {{data.y | currency : "₴"}}
