--- a/app/assets/javascripts/application/templates/index.html.slim
+++ b/app/assets/javascripts/application/templates/index.html.slim
@@ -2,15 +2,14 @@
   .col-md-12
     h2 style="color:green"
       | Balance is {{balance.value}}
-    select.form-control placeholder="Category" ng-model="selected_category" ng-options="category.name for category in categories track by category.id"
-      option value="" disabled=true selected=true Category
-    a.pull-right ng-click="addCategory()"
-      i.fa.fa-plus style="cursor: pointer"
-    small.error ng-show="transaction_errors.category_id" You have to chose category. &nbsp;
-    small.error ng-show="transaction_errors.summ" Summ is required, should be greater than 0
-    br
     .col-md-6
       h3 Outgo:
+      select.form-control placeholder="Category" ng-model="selected_category" ng-options="category.name for category in categories track by category.id"
+        option value="" disabled=true selected=true Category
+      a.pull-right ng-click="addCategory()"
+        i.fa.fa-plus style="cursor: pointer"
+      small.error ng-show="transaction_errors.category_id" You have to chose category. &nbsp;
+      small.error ng-show="transaction_errors.summ" Summ is required, should be greater than 0
       br
       form name="form" novalidate=true
         input.form-control name="value" placeholder="Summ" type="number" step="0.01" min="0.01" ng-model="outgoValue"
@@ -18,22 +17,25 @@
         input.form-control placeholder="Comment" name="outgoComment" type="text" ng-model="outgoComment"
         br
         button.btn.btn-default.pull-right type="submit" ng-click="fixOutgo(outgoValue, selected_category, outgoComment)"
-          | submit
+          | Fix outgo
     .col-md-6
       br
-      h3 Income:
-      form name="incomeForm"
-      input.form-control name="income" placeholder="Summ" type="number" step="0.01" min="0.01" ng-model="incomeValue"
-      br
-      input.form-control placeholder="Comment" name="incomeComment" type="text" ng-model="incomeComment"
-      br
-      button.btn.btn-default.pull-right type="submit" ng-click="fixIncome(incomeValue, selected_category, incomeComment)"
-        | submit
+      button.btn.btn-default type="submit" ng-click="fixIncome()"
+        | New income
+      h3 ng-show="incomes.length" Last incomes:
+      ul.list-group
+        li.list-group-item.income ng-repeat="income in incomes"
+          | {{ income.value | currency : "₴" }} {{ income.comment != null ? "| " + income.comment : "" }} {{ "| " + (income.created_at | date) }}
+          a.pull-right ng-click="removeIncome(income.id)"
+            i.fa.fa-close style="cursor: pointer"
 .row
-  .col-md-12 ng-show="transactions.length"
-    h3 Last transactions:
-    ul.list-group
-      li.list-group-item ng-repeat="transaction in transactions" ng-class="transaction.summ > 0 ? 'income' : 'outgo'"
-        | {{ transaction.summ | currency : "₴" }} {{ transaction.comment != null ? "| " + transaction.comment : "" }} {{ "| " + (transaction.created_at | date) }}
-        a.pull-right ng-click="removeTransaction(transaction.id)"
-          i.fa.fa-close style="cursor: pointer"
+  .col-md-12
+    .col-md-6
+      h3 Last transactions:
+      ul.list-group ng-repeat="category in transactions"
+        h4 ng-show="category.transactions.length"
+          | {{category.category}}
+        li.list-group-item.outgo ng-repeat="transaction in category.transactions"
+          | {{ transaction.summ | currency : "₴" }} {{ transaction.comment != null ? "| " + transaction.comment : "" }} {{ "| " + (transaction.created_at | date) }}
+          a.pull-right ng-click="removeTransaction(transaction.id)"
+            i.fa.fa-close style="cursor: pointer"
