--- a/app/assets/javascripts/application/templates/modals/confirm-income-dialog.html.slim
+++ b/app/assets/javascripts/application/templates/modals/confirm-income-dialog.html.slim
@@ -2,10 +2,16 @@
   h3 class="modal-title" Fix income:
 .modal-body
   input.form-control type="number" ng-model="incomeValue" placeholder="Value" min="0.01" step="0.01"
+  br
+  p.input-group
+    input type="text" class="form-control" placeholder="Income time" datepicker-popup="dd-MMMM-yyyy" ng-model="income_time" is-open="from_opened" close-text="Close"
+    span.input-group-btn
+      button type="button" class="btn btn-default" ng-click="from_opened = true"
+        i.glyphicon.glyphicon-calendar
   small.error ng-show="income_errors" required
   br
   input.form-control type="text" ng-model="incomeComment" placeholder="Comment"
   small.error ng-show="errors" required
 .modal-footer
-  button class="btn btn-primary" type="button" ng-click="ok(incomeValue, incomeComment)" OK
+  button class="btn btn-primary" type="button" ng-click="ok(incomeValue, incomeComment, income_time)" OK
   button class="btn btn-warning" type="button" ng-click="cancel()" Cancel
