--- a/app/assets/javascripts/application/modules/main.module.js.erb
+++ b/app/assets/javascripts/application/modules/main.module.js.erb
@@ -27,6 +27,11 @@
         templateUrl: "<%= asset_path('application/templates/chart.html') %>",
         controller: 'ChartCtrl'
       })
+      .state('t-management', {
+        url: '/t_management',
+        templateUrl: "<%= asset_path('application/templates/transactions-management.html') %>",
+        controller: "ManagementCtrl"
+      })
   }]);
 
 }());
