--- a/app/assets/javascripts/application/templates/_header.html.slim
+++ b/app/assets/javascripts/application/templates/_header.html.slim
@@ -1,9 +1,11 @@
 nav.navbar.navbar-default
-	.container-fluid
-		ul.nav.navbar-nav.navbar-right
-			li
-				a href="#/root" Home
-			li
-				a href="#/chart" Chart
-			li
-				a href="/logout" sign out
+  .container-fluid
+    ul.nav.navbar-nav.navbar-right
+      li
+        a href="#/root" Home
+      li
+        a href="#/chart" Chart
+      li
+        a href="#/t_management" Management
+      li
+        a href="/logout" Sign out
