--- a/app/assets/javascripts/application/templates/modals/confirm-income-dialog.html.slim
+++ b/app/assets/javascripts/application/templates/modals/confirm-income-dialog.html.slim
@@ -1,5 +1,5 @@
 .modal-header
-  h3 class="modal-title" Fix income:
+  h3 class="modal-title" style="color:#000" Fix income:
 .modal-body
   input.form-control type="number" ng-model="incomeValue" placeholder="Value" min="0.01" step="0.01"
   br
