--- a/app/assets/javascripts/application/templates/modals/new-category-modal.html.slim
+++ b/app/assets/javascripts/application/templates/modals/new-category-modal.html.slim
@@ -1,5 +1,5 @@
 .modal-header
-  h3 class="modal-title" New category:
+  h3 class="modal-title" style="color:#000" New category:
 .modal-body
   input.form-control type="text" ng-model="category_name" placeholder="Name"
   small.error ng-show="errors" required
