--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,13 +6,20 @@
 @import "bootswatch/lumen/bootswatch"
 @import "font-awesome"
 
+body
+  overflow-x: hidden
+  background: linear-gradient(rgba(0,0,102, 0.65),rgba(0,0,102, 0.65)), url(images/Dollars.jpg)
+  color: #fff
+
 .container
   width: 90%
 .error
-  color: red
+  color: rgb(184, 0, 0)
+  background: rgba(255,255,255,0.5)
+  padding: 0.5em
 .valid
   background: red
 .income
-  background: rgba(0, 204, 0, 0.4) 
+  background: rgba(0, 204, 0, 0.7) 
 .outgo
-  background: rgba(255, 102, 0, 0.4)
+  background: rgba(255, 102, 0, 0.7)
