--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
 <div ng-include="'<%= asset_path('application/templates/_header.html') %>'"></div>
 
-<div class="container well" ui-view></div>
+<div class="container" ui-view></div>
