--- a/app/assets/javascripts/application/templates/_header.html.slim
+++ b/app/assets/javascripts/application/templates/_header.html.slim
@@ -1,5 +1,6 @@
 nav.navbar.navbar-default
   .container-fluid
+    a.navbar-brand href="#/" My money-money
     ul.nav.navbar-nav.navbar-right
       li
         a href="#/root" Home
