--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   
 <div class="col-md-12">
 <div class="col-md-4"></div>
-<div class="col-md-4 well" style="margin-top:5em;">
+<div class="col-md-4" style="margin-top:5em;">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
