--- a/app/assets/javascripts/application/templates/_header.html.slim
+++ b/app/assets/javascripts/application/templates/_header.html.slim
@@ -1,12 +1,20 @@
-nav.navbar.navbar-default
+nav.navbar.navbar-default.navbar-fixed-top role="navigation"
   .container-fluid
-    a.navbar-brand href="#/" My money-money
-    ul.nav.navbar-nav.navbar-right
-      li
-        a href="#/root" Home
-      li
-        a href="#/chart" Chart
-      li
-        a href="#/t_management" Management
-      li
-        a href="/logout" Sign out
+    .navbar-header
+      button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle collapsed" aria-expanded="false"
+        span class="sr-only"
+          | Toggle navigation
+        span class="icon-bar"
+        span class="icon-bar"
+        span class="icon-bar"
+      a.navbar-brand href="#/" My money-money
+    .navbar-collapse.collapse.navbar-responsive-collapse
+      ul.nav.navbar-nav.navbar-right
+        li
+          a href="#/root" Home
+        li
+          a href="#/chart" Chart
+        li
+          a href="#/t_management" Management
+        li
+          a href="/logout" Sign out
