--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
-<div ng-include="'<%= asset_path('application/templates/_header.html') %>'"></div>
+<div ng-include="'<%= asset_path('application/templates/_header.html') %>'" style="margin-bottom:7em"></div>
 
 <div class="container" ui-view></div>
