--- a/app/assets/javascripts/application/controllers/index.controller.js.erb
+++ b/app/assets/javascripts/application/controllers/index.controller.js.erb
@@ -11,6 +11,7 @@
         balances.getBalance()
           .success(function(data) {
             $scope.balance = data.balance;
+            $scope.account = data.account;
           })
       };
       getBalance();
