--- a/app/assets/javascripts/application/templates/chart.html.slim
+++ b/app/assets/javascripts/application/templates/chart.html.slim
@@ -1,4 +1,4 @@
-.row
+.row.fade-in
   .col-md-3
     | From Date:
     p.input-group
@@ -20,9 +20,9 @@
   .error style="text-align:center" ng-hide="graphData.length || hideError" There were no transactions in given period
   .col-md-7 ng-show="graphData.length"
     br
-    #chart style="height:400px"
+    #chart.fade-in style="height:400px"
   .col-md-5 ng-show="graphData.length"  
     br
     ul.list-group
-      li.list-group-item.outgo ng-repeat="data in graphData"
+      li.list-group-item.outgo.fade-in ng-repeat="data in graphData"
         | {{data.name}} -- {{data.y | currency : "₴"}}
