--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -3,7 +3,6 @@
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
-@import "bootswatch/lumen/bootswatch"
 @import "font-awesome"
 
 body
@@ -23,3 +22,18 @@ body
   background: rgba(0, 204, 0, 0.7) 
 .outgo
   background: rgba(255, 102, 0, 0.7)
+.list-group-item
+  border-radius: 0
+  border: none
+.list-group-item:last-child, .list-group-item:first-child
+  border-radius: 0
+.form-control
+  border-radius: 0
+
+// BUTTONS==================================================================
+.btn
+  border-radius: 0
+  border: none
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.62)
+  text-transform: uppercase
+  font-weight: 600
