--- a/app/assets/javascripts/application/templates/_header.html.slim
+++ b/app/assets/javascripts/application/templates/_header.html.slim
@@ -15,6 +15,8 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
         li
           a href="#/chart" Chart
         li
+          a href="#/area_graph" Area graph
+        li
           a href="#/t_management" Management
         li
           a href="/logout" Sign out
