--- a/app/assets/javascripts/application/templates/chart.html.slim
+++ b/app/assets/javascripts/application/templates/chart.html.slim
@@ -24,5 +24,5 @@
     .col-md-5 ng-show="graphData.length"  
       br
       ul.list-group
-        li.list-group-item.outgo.fade-in ng-repeat="data in graphData"
+        li.list-group-item.outgo.white.fade-in ng-repeat="data in graphData"
           | {{data.name}} -- {{data.y | currency : "₴"}}
