--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,7 +8,6 @@
 body
   overflow-x: hidden
   background: linear-gradient(rgba(0,0,102, 0.65),rgba(0,0,102, 0.65)), url(images/Dollars.jpg)
-  color: #fff
 
 .container
   width: 90%
@@ -29,6 +28,8 @@ body
   border-radius: 0
 .form-control
   border-radius: 0
+.white
+  color: #fff
 
 // BUTTONS==================================================================
 .btn
