--- a/app/assets/javascripts/application/templates/chart.html.slim
+++ b/app/assets/javascripts/application/templates/chart.html.slim
@@ -1,13 +1,13 @@
 .row.fade-in
   .col-md-3
-    | From Date:
+    span.white From Date:
     p.input-group
       input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="fromDate" is-open="from_opened" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
       span.input-group-btn
         button type="button" class="btn btn-default" ng-click="from_opened = true"
           i.glyphicon.glyphicon-calendar
   .col-md-3
-    | To Date:
+    span.white To Date:
     p.input-group
       input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="toDate" is-open="to_opened" min-date="fromDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
       span.input-group-btn
