--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -18,7 +18,7 @@ body
 .valid
   background: red
 .income
-  background: rgba(0, 204, 0, 0.7) 
+  background: rgba(0, 204, 0, 0.7)
 .outgo
   background: rgba(255, 102, 0, 0.7)
 .list-group-item
@@ -35,6 +35,6 @@ body
 .btn
   border-radius: 0
   border: none
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.62)
+  box-shadow: 0 3px 5px 0 rgba(0,0,0,0.62)
   text-transform: uppercase
   font-weight: 600
