--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,6 +24,8 @@ body
 .list-group-item
   border-radius: 0
   border: none
+  box-shadow: 0px 10px 16px -2px rgba(0,0,0,0.75)
+  margin-bottom: 10px
 .list-group-item:last-child, .list-group-item:first-child
   border-radius: 0
 .form-control
