--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,6 +8,9 @@
 body
   overflow-x: hidden
   background: linear-gradient(rgba(0,0,102, 0.65),rgba(0,0,102, 0.65)), url(images/Dollars.jpg)
+  background-attachment: fixed
+::-webkit-scrollbar
+  display: none
 
 .container
   width: 90%
