--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -43,3 +43,9 @@ body
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.62)
   text-transform: uppercase
   font-weight: 600
+
+#currency_template
+  position: fixed
+  top: 5em
+  right: 5em
+  color: white
